--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="placeholder">Placeholder</string>
     <string name="hello_world">Hello, World!</string>
     <string name="no_goals_for_the_day">no_goals_for_the_day</string>
+    <string name="NewTask">NewTask</string>
 </resources>
