--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,22 @@
 <resources>
     <string name="app_name">Successorator</string>
-    <string name="placeholder">Placeholder</string>
+    <string name="app_title">Successorator</string>
     <string name="hello_world">Hello, World!</string>
-    <string name="no_goals_for_the_day">no_goals_for_the_day</string>
-    <string name="NewTask">NewTask</string>
+    <string name="previous">Previous</string>
+    <string name="shuffle">Shuffle</string>
+    <string name="next">Next</string>
+    <string name="cards_in_deck_text_format">Deck contains %d cards</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="swap_views">Swap Views</string>
+    <string name="back_text">Back text...</string>
+    <string name="front_text">Front text...</string>
+    <string name="append">Append</string>
+    <string name="prepend">Prepend</string>
+    <string name="create_a_new_card">Create a New Card</string>
+    <string name="card_front_text">Card Front Text</string>
+    <string name="card_back_text">Card Back Text</string>
+    <string name="remove_button">Remove button</string>
+    <string name="add_button">+</string>
+    <string name="no_goals_text">No goals for the Day. Click the + at the upper right to enter your Most Important Thing.</string>
 </resources>
